# tfg

./: README.md  main.py  prueba.csv  pyproject.toml
chatgpt/: digest.txt  prompt.txt
docs/: Estructura Microsoft Access Comunidad De Madrid.md  importar_csv.md
docs/columnas/: CULT_BIENES.md  CULT_BIENES_BIBLIO.md  CULT_BIENES_DEPOSITO.md  CULT_BIENES_DOC_LEGAL.md  CULT_BIENES_INVESTIGA.md  CULT_BIENES_PICKLIST.md  CULT_BIENES_PRO_PATRI.md  CULT_BIENES_PRO_URBAN.md  CULT_POLIGONO.md
docs/lib/inphis/factory/: CULT_BIENES.md
docs/lib/inphis/models/: CULT_BIENES.md  CULT_BIENES_PICKLIST.md
dumps/: index.json  snapshot.json  snapshot_diff.json  snapshot_post.json
lib/inphis/factory/: cult_bienes.py
lib/inphis/models/: cult_bienes.py  cult_bienes_picklist.py
lib/interfaces/: factory.py  models.py  types.py
lib/odbc/: connection.py
lib/odbc/checkers/: __init__.py  microsoft_access.py
lib/orm/queries/: order_by_conditions.py  query.py  where_conditions.py
lib/orm/tables/: table.py  table_index.py
lib/orm/types/: string.py
lib/orm/utils/: build_query.py  convert_to_type.py
lib/tables/: table.py  table_index.py
lib/types/: integer.py  null.py  t_date.py  t_integer.py  t_null.py  t_string.py
lib/utils/: build_query.py  convert_to_type.py  save_to.py
