[tool.poetry]
name = "integracion-python"
version = "0.1.0"
description = ""
authors = ["adriantoral <adrian.rubiboy11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
